[package]
name = "memoiter"
description = "Memoization of Iterators, so that their past results can be indexed."
version = "2.2.0"

authors = ["Yaulendil <davarice@protonmail.com>"]
repository = "https://github.com/yaulendil/memoiter"
readme = "README.md"

exclude = ["/.idea"]
categories = ["caching", "data-structures"]
keywords = ["iterator", "memoization", "utility", "cache", "library"]

edition = "2018"
license = "MIT"

[dependencies]
